--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
+bcrypt==3.1.4
 bottle==0.12.13
 bottle-session==0.8
 bottle-sqlalchemy==0.4.3
+cffi==1.11.4
+pycparser==2.18
 redis==2.10.6
+six==1.11.0
 SQLAlchemy==1.2.0
